- Fix scrolling when menu nav is opened on mobile - Fix footer on mobile

--- a/themes/evolve/lessc/footer.less
+++ b/themes/evolve/lessc/footer.less
@@ -185,6 +185,7 @@
     margin-bottom: 10px;
     .footer-block-header{
       position: relative;
+      z-index: 9999;
       .footer-heading{
         color: #FFFFFF;
         font-size: 1.4em;
@@ -250,6 +251,7 @@
       padding: 10px 0 20px;
       border-bottom: 1px solid #6f7175;
       .footer-block-header{
+        cursor: pointer;
         .chevron-circle{
           display: block;
         }
