--- a/themes/evolve/lessc/menu.less
+++ b/themes/evolve/lessc/menu.less
@@ -333,6 +333,8 @@
         }
         &.menu-open{
             overflow: hidden;
+            position: relative;
+            height: 100%;
             #block-dexp-menu-dexp-menu-block-1{
                 #dexp-dropdown{
                     left: 0;
