--- a/themes/evolve/lessc/popups.less
+++ b/themes/evolve/lessc/popups.less
@@ -1158,6 +1158,9 @@ div[aria-describedby="signupWebUser"]{
     width: 400px !important;
     left: calc(~"50vw - 200px")!important;
     top: calc(~'50vh - 216px') !important;
+    .flex-cell + p{
+        display: none;
+    }
     .modal-body{
         overflow-x: hidden;
         padding: 0;
